--- a/Task3_Gunjan.ipynb
+++ b/Task3_Gunjan.ipynb
@@ -3412,9 +3412,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cf7cb35-294c-4180-a3d0-ea8f3e48b59c",
+   "metadata": {},
+   "source": [
+    "| **Concept**             | **Symbol** | **Meaning**                                                        | **Typical Value**    |\n",
+    "|-------------------------|------------|---------------------------------------------------------------------|----------------------|\n",
+    "| Null Hypothesis         | H₀         | Assumes no effect or difference                                    | —                    |\n",
+    "| Alternative Hypothesis  | H₁         | Assumes there is an effect or difference                           | —                    |\n",
+    "| Significance Level      | α (alpha)  | Probability of making a Type I error (rejecting H₀ when true)      | 0.05 (5%)            |\n",
+    "| Confidence Level        | 1 − α      | Confidence in the test results                                     | 0.95 (95%)           |\n",
+    "| Power of Test           | 1 − β      | Probability of correctly rejecting H₀ (detecting real effect)      | ≥ 0.80 (80%)         |\n",
+    "| Type I Error            | α          | False positive (reject H₀, but H₀ is true)                         | ≤ 0.05               |\n",
+    "| Type II Error           | β          | False negative (fail to reject H₀, but H₁ is true)                | ≤ 0.20               |\n",
+    "| p-value                 | p          | Probability of obtaining the observed result if H₀ is true         | Computed from test   |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8fec394-6bfb-41d7-b451-3ddc3b492168",
+   "id": "db3670c5-4b44-4f95-86c6-05a145bc0642",
    "metadata": {},
    "outputs": [],
    "source": []
